# ClawTeamHarness

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/sdk/: __init__.py  client.py
backend/src/: __init__.py  config.py  security.py
backend/src/agents/: __init__.py  agent_factory.py  checkpoint.py  collaboration.py  config_models.py  engine.py  intent.py  nodes.py  nodes_advanced.py  response.py  serializer.py  simple_agent.py  state_machine.py  workflow_engine.py
backend/src/agents/memory/: __init__.py  manager.py
backend/src/agents/modes/: __init__.py  auto_gpt.py  baby_agi.py  chat.py  plan_execute.py  react.py
backend/src/agents/protocols/: __init__.py  file_lock.py  file_protocol.py
backend/src/api/: main.py
backend/src/api/routes/: agents.py  llm.py  mcp.py  mcp_hub.py  memory.py  models.py  ontology.py  settings.py  skills.py  skills_hub.py  tasks.py  teams.py  websocket.py
backend/src/db/: __init__.py  database.py
backend/src/mcp/: __init__.py  adapter.py  client.py  config.py
backend/src/memory/: __init__.py  long_term.py  short_term.py  vector.py
backend/src/skills/: __init__.py  loader.py  protocol.py
backend/src/skills/builtin/: __init__.py  calculator.py  search.py  web_request.py
backend/src/trace/: __init__.py  langfuse_tracer.py
data/: harness.db
docs/: AGENT_DESIGN_V2.md  AGENT_GRAPH_GUIDE.md  BOB_TASKS_V2.md  CODE_REVIEW_STANDARDS.md  CONTINUE_DEVELOPMENT_PLAN.md  DEMO_PAPER_RESEARCH.md  MULTI_AGENT_COLLABORATION_DESIGN.md  MULTI_AGENT_CONFIG_DESIGN.md  MULTI_AGENT_PAGE_DESIGN.md  TASKS.md  (+15 more)
(+95 files in other folders)
